--- a/config_file/application-dev.yml
+++ b/config_file/application-dev.yml
@@ -1,6 +1,6 @@
 spring:
     datasource:
-          type: com.alibaba.druid.pool.DruidDataSource  update
+          type: com.alibaba.druid.pool.DruidDataSource
           driver-class-name: oracle.jdbc.driver.OracleDriver
           #url: jdbc:oracle:thin:@192.168.20.209:1521:payment
           url: jdbc:oracle:thin:@192.168.20.15:1521:mobopay2
