--- a/config_file/application-dev.yml
+++ b/config_file/application-dev.yml
@@ -28,6 +28,6 @@ zuul:
      path: /api-member/**   #访问只要是/api-member/ 开头的直接转发到member-service服务
      #服务名
      serviceId: member-service
-   api-b: #点单服务网关配置
+   api-b: #订单服务网关配置
      path: /api-order/**
      serviceId: order-serv
